WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97962
[BlackBerry] Paused in Inspector, Browser doesn't exit cleanly
https://bugs.webkit.org/show_bug.cgi?id=97962
Summary
[BlackBerry] Paused in Inspector, Browser doesn't exit cleanly
Peter Wang
Reported
2012-09-28 20:24:40 PDT
If have Inspector connected and paused at a breakpoint, the browser cannot exit cleanly, after a little while, it'll be killed by system watchdog.
Attachments
Patch
(1.48 KB, patch)
2012-09-28 20:44 PDT
,
Peter Wang
no flags
Details
Formatted Diff
Diff
Patch
(1.48 KB, patch)
2012-10-11 21:17 PDT
,
Peter Wang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Peter Wang
Comment 1
2012-09-28 20:44:18 PDT
Created
attachment 166352
[details]
Patch
WebKit Review Bot
Comment 2
2012-10-11 20:50:33 PDT
Comment on
attachment 166352
[details]
Patch Rejecting
attachment 166352
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebKit/blackberry/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/14250966
Peter Wang
Comment 3
2012-10-11 21:17:10 PDT
Created
attachment 168351
[details]
Patch
Charles Wei
Comment 4
2012-10-11 21:19:19 PDT
Comment on
attachment 168351
[details]
Patch Already reviewed by George .Commit it .
WebKit Review Bot
Comment 5
2012-10-11 22:40:02 PDT
Comment on
attachment 168351
[details]
Patch Clearing flags on attachment: 168351 Committed
r131143
: <
http://trac.webkit.org/changeset/131143
>
WebKit Review Bot
Comment 6
2012-10-11 22:40:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug