[BlackBerry] Paused in Inspector, Browser doesn't exit cleanly https://bugs.webkit.org/show_bug.cgi?id=97962

Patch by Peter Wang <peter.wang@torchmobile.com.cn> on 2012-10-11
Reviewed by George Staikos.

Before destroying webpage, close the inspector, so if the JSC is paused it will be resumed.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPage::destroy):

Canonical link: https://commits.webkit.org/117112@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131143 268f45cc-cd09-0410-ab3c-d52691b4dbfc